Add GET /policies and enrich API docs: getting-started guide, seeded-policy table, pre-filled request examples
